# PlayTogether

./: CMakeLists.txt  PlayTogether  README.md  client_window.c  db.c  db.h  main.c  server_window.h  setup_window.c  setup_window.h  socket.c  socket.h  structs.h
database/: database.c  database.h
main/: main.c
screen/client/: client_window.glade  client_window.h
screen/main/: main_window.c  main_window.glade  main_window.glade~  main_window.h
screen/server/: server_window.c  server_window.glade
screen/setup/: setup_window.c  setup_window.glade  setup_window.glade~  setup_window.h
socket/client/: client.c  client.h  client_socket.c  client_socket.h
socket/server/: server.c  server.h  server_socket.c  server_socket.h
struct/: constants.h  user.h
vlc/: vlc.c  vlc.h
